<resources>
    <string name="app_name">Dynamic Menu System</string>
    <string name="default_text">This is a default text string incase a menu wasnt found</string>
    <string name="drawerExplanation">Drawer Menu Layout</string>
    <string name="openButton">Open</string>
    <string name="okayPrompt">Okay</string>
    <string name="notOkayPrompt">Cancel</string>

    <string name="networkDetails">Network details</string>
    <string name="downloadLatest">Download latest document</string>
    <string name="amIConnected">Am i connected?</string>
    <string name="reconnect">Reconnect</string>
    <string name="pinDevice">Lock device</string>
    <string name="unlockDevice">Unlock device</string>
    <string name="turnOffDevice">Turn off device</string>
    <string name="deviceStatistics">Device Statistics</string>

    <string name="networkDetailsTabText">networkDetailsTab</string>

    <string name="fileLineAppend">%s&lt;br&gt;%s</string>

</resources>
