<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">



    <item
        android:id="@+id/networkDetailsTab"
        android:icon="@drawable/baseline_wifi_24"
        android:title="@string/networkDetails"/>
    <item
        android:id="@+id/downloadLatestTab"
        android:icon="@drawable/baseline_download_24"
        android:title="@string/downloadLatest"/>
    <item
        android:id="@+id/amIConnectedTab"
        android:icon="@drawable/baseline_signal_wifi_statusbar_connected_no_internet_4_24"
        android:title="@string/amIConnected"/>
    <item
        android:id="@+id/reconnectTab"
        android:icon="@drawable/baseline_wifi_protected_setup_24"
        android:title="@string/reconnect"/>
    <item
        android:id="@+id/unlockDeviceTab"
        android:icon="@drawable/baseline_lock_24"
        android:title="@string/unlockDevice"/>

    <item
        android:id="@+id/turnOffDeviceTab"
        android:icon="@drawable/baseline_power_settings_new_24"
        android:title="@string/turnOffDevice"/>

    <item
        android:id="@+id/deviceStatistics"
        android:icon="@drawable/baseline_info_24"
        android:title="@string/deviceStatistics"/>






</menu>